--- a/index.html
+++ b/index.html
@@ -2,13 +2,22 @@
 
 <html>
 	<head>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600&display=swap"
+			rel="stylesheet"
+		/>
+
 		<title>Simple Hangman Game</title>
 
 		<link rel="stylesheet" href="style/style.css" />
 		<link rel="icon" href="images/favicon.png" />
 	</head>
 	<body>
-		<div>
+		<div class="wrapper">
+			<h1>HANGMAN GAME</h1>
+			<p class="help">Press a letter to start a game.</p>
 			<div id="puzzle" class="puzzle"></div>
 			<p id="guesses"></p>
 			<button id="reset" class="button">New Game</button>
